--- a/src/main/kotlin/com/dengzii/plugin/rbk/ui/MainDialog.form
+++ b/src/main/kotlin/com/dengzii/plugin/rbk/ui/MainDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="contentPanel" layout-manager="GridLayoutManager" row-count="9" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="5" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="578" height="400"/>
+      <xy x="20" y="20" width="615" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -23,7 +23,10 @@
         </constraints>
         <properties>
           <enabled value="false"/>
+          <opaque value="true"/>
+          <selected value="false"/>
           <text value="Undo when remove failed. "/>
+          <visible value="true"/>
         </properties>
       </component>
       <component id="e5a49" class="javax.swing.JTextField" binding="bindViewMethodNameField">
@@ -134,7 +137,9 @@
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <selected value="true"/>
               <text value="Priority to search and replace &quot;ButterKnife.bind&quot; statement"/>
+              <visible value="true"/>
             </properties>
           </component>
         </children>
